<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:context=".MainActivity"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/StringOneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:text="@string/StringOneLabel"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        />

    <TextView
        android:id="@+id/StringTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:text="@string/StringTwoLabel"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_below="@id/StringOneLabel"
        />

    <EditText
        android:id="@+id/StringOne"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/StringOneLabel"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:hint="@string/StringHint"
        android:autofillHints="Enter string here"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/StringTwo"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/StringTwoLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/StringOne"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="textAutoCorrect"
        android:hint="@string/StringHint"
        android:autofillHints="Enter string here"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCombineString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/StringTwoLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#2196F3"
        android:padding="15dp"
        android:text="@string/ConcatString"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/CombineStringResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCombineString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />

    <Button
        android:id="@+id/btnCompareString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CombineStringResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#2196F3"
        android:padding="15dp"
        android:text="@string/CompareString"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/CompareStringResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCompareString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />

    <Button
        android:id="@+id/btnCountVowelString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CompareStringResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#2196F3"
        android:padding="15dp"
        android:text="@string/CountVowels"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/CountVowelStringResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCountVowelString"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />

        </RelativeLayout>
    </ScrollView>